feat: Phase 13 보안 강화 및 문서화
- CORS 허용 오리진 환경변수화 (CORS_ALLOWED_ORIGINS)
- JWT 기본 시크릿 키 사용 시 시작 경고 로그 추가
- 로그인 Rate Limiting 구현 (IP당 5회/15분, HTTP 429)
- 프로덕션 로그 레벨 기본값 조정 (INFO/WARN)
- Security Response Headers 추가 (X-Frame-Options: DENY)
- README, CLAUDE.md, .env.example 문서 업데이트

Co-Authored-By: Claude Opus 4.6 <noreply@anthropic.com>